RESOLVED FIXED302748
Swift version check is incorrect
https://bugs.webkit.org/show_bug.cgi?id=302748
Summary Swift version check is incorrect
Mike Wyrzykowski
Reported 2025-11-18 17:11:01 PST
Swift version check is incorrect
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-18 17:11:27 PST
Mike Wyrzykowski
Comment 2 2025-11-18 17:38:04 PST
EWS
Comment 3 2025-11-18 21:41:29 PST
Committed 303227@main (75019e71b331): <https://commits.webkit.org/303227@main> Reviewed commits have been landed. Closing PR #54150 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.