Swift version check is incorrect https://bugs.webkit.org/show_bug.cgi?id=302748 rdar://165008184

Reviewed by Geoffrey Garen.

We can not simply say:

  A == B && C >= D && E >= F...

counter-example:
  C=100, D=99, E=0, and F=1

fails but we expected it to pass

* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::swiftCompilerSupportsWebGPU):

Canonical link: https://commits.webkit.org/303227@main